analytics-service/analytcs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    app: analytics-service
spec:
  type: LoadBalancer   # Exposes service to the internet
  selector:
    app: analytics-service
  ports:
    - port: 3000
      targetPort: 3000
