analytics-service/analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    app: analytics-service
spec:
  type: ClusterIP   # Exposes service to the internet
  selector:
    app: analytics-service
  ports:
    - port: 3000
      targetPort: 3000
#1789
