analytics-service/analytics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"   # GKE HTTP(S) LB
spec:
  rules:
    - http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3000
